# fake-twitter

./: .gitignore  README.md  pyproject.toml
src/: manage.py
src/tweets/: models.py  serializers.py  urls.py  views.py
src/tweets/migrations/: 0001_initial.py  0002_initial.py
src/twitter_fake/: asgi.py  settings.py  urls.py  wsgi.py
src/users/: models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
tests/: conftest.py
tests/tweets/: test_tweets.py
tests/users/: test_users.py
